# langchain

./: .env.example  README.md  notes.md  pyproject.toml
docs/: 01_genai_interaktion.txt  02_data_till_kunskap.txt  03_agenter_langchain.txt  04_verktyg_rag.txt  05_multi_agent.txt  06_hybridteam.txt  07_llm_grunder.txt  Nackademin_yrkesh_gskola_-_YH_-_Utbildningar_som_leder_till_.txt  agents.txt  mlops.txt  rag.txt
docs/langchain/: component-architecture.mdx  knowledge-base.mdx  models.mdx  philosophy.mdx  rag.mdx  retrieval.mdx  short-term-memory.mdx  voice-agent.mdx
docs/langchain/errors/: MESSAGE_COERCION_FAILURE.mdx
docs/langchain/middleware/: built-in.mdx  custom.mdx
docs/langchain/multi-agent/: custom-workflow.mdx  handoffs-customer-support.mdx  handoffs.mdx  index.mdx  router-knowledge-base.mdx  router.mdx  skills-sql-assistant.mdx  skills.mdx  subagents-personal-assistant.mdx
docs/langchain/multi-agent/mermaid/: multidomain-handoffs.mmd  multidomain-router.mmd  multidomain-skills.mmd  multidomain-subagents.mmd  oneshot-handoffs.mmd  oneshot-router.mmd  oneshot-skills.mmd  oneshot-subagents.mmd  pattern-handoffs.mmd  pattern-router.mmd  pattern-skills.mmd  pattern-subagents.mmd
docs/langchain/streaming/: frontend.mdx
docs/python/integrations/chains/: sap_hana_sparql_qa_chain.mdx
docs/python/integrations/chat/: kinetica.mdx  openai.mdx
examples/agent-lecture/: simple_agent.py
my_agents/: code_agent.py  rag_maintenance.py  readme_agent.py  task_agent.py
util/: models.py  pretty_print.py  streaming_utils.py  tool_config.py  tool_schema.py  tools.py
(+18 files in other folders)
