[project]
name = "langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain==1.2.10",
    "langchain-ollama>=0.2.0",
    "langchain-core==1.2.11",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=0.3.0",
    "langgraph==1.0.8",
    "langchain-mcp-adapters",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.4",
    "bs4>=0.0.2",
]
